Fix Welcome Page spacing

--- a/src/css/elements/navbar.scss
+++ b/src/css/elements/navbar.scss
@@ -60,7 +60,7 @@ nav {
   box-shadow: var(--shadow-popup);
   transition: all .2s ease-in-out;
   &.hidden{
-    left:-500px;
+    left:-800px;
     transition: all .3s ease-in-out;
   }
 }
